--- a/assets/css/mycolor-and-text.css
+++ b/assets/css/mycolor-and-text.css
@@ -1,3 +1,24 @@
-body {
-    background-color: black;
+#landing-page {
+    background-color: #000000;
+    color: grey;
+}
+
+.btn {
+    background-image: linear-gradient(to right, grey , grey);
+}
+
+.separator-1 {
+    height: 10px;
+    background-color: whitesmoke;
+    margin: 0;
+}
+
+#footer {
+    margin: 0;
+    max-width: 100%;
+    background-color: #000000;
+}
+
+a {
+    color: white;
 }
