enhanced theme, added and reorganised links

--- a/assets/css/mycolor-and-text.css
+++ b/assets/css/mycolor-and-text.css
@@ -1,10 +1,31 @@
 #landing-page {
-    background-color: #000000;
-    color: grey;
+    /* background-color: #040C18; */
+    color: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);;
+    background:-moz-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
+  
+    /* safari 5.1+,chrome 10+ */
+    background:-webkit-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
+  
+    /* opera 11.10+ */
+    background:-o-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
+  
+    /* ie 10+ */
+    background:-ms-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
+  
+    /* global 92%+ browsers support */
+    background:radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
+}
+
+.gradient-text {
+    background: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 800;
 }
 
 .btn {
-    background-image: linear-gradient(to right, grey , grey);
+    background-image: linear-gradient(to right, #AE67FA , #F49867    );
 }
 .btn:hover {
     background-image: linear-gradient(to right, rgb(255, 255, 255) , rgb(255, 255, 255));
@@ -36,4 +57,8 @@
 
 .content-link:hover {
     color:black;
+}
+
+.inactive {
+    color: rgb(75, 75, 75)!important;
 }
