--- a/assets/css/mycolor-and-text.css
+++ b/assets/css/mycolor-and-text.css
@@ -40,7 +40,7 @@
 #footer {
     margin: 0;
     max-width: 100%;
-    background-color: #000000;
+    /* background-color: #000000; */
 }
 
 .nav-link, .social-links {
